--- a/index.html
+++ b/index.html
@@ -234,10 +234,9 @@
     <div class="large-4 columns">
         <p>This research was conducted by Ryan Price, a Master’s student under the supervision of Dr. Christina Baade in the department of Communications and New Media at McMaster University.</p>
 
-        <p>The survey and interviews conducted as part of this study was reviewed and cleared by the McMaster Research Ethics Board (MREB). The MREB protocol number associated with this research is 2014 062.</p>
+        <p>The survey and interviews conducted as part of this study was reviewed and cleared by the McMaster Research Ethics Board (MREB). The MREB protocol number associated with this research is 2014 062. TEST</p>
     </div>
 </div>
 
     </body>
 </html>
-<!-- TEST COMMIT -->
